--- a/app/src/main/res/layout/fragment_switch_language.xml
+++ b/app/src/main/res/layout/fragment_switch_language.xml
@@ -1,6 +1,4 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -65,7 +63,7 @@
             <ImageView
                 android:layout_width="@dimen/margin_40"
                 android:layout_height="@dimen/margin_26"
-                android:src="@drawable/ic_flat_en" />
+                android:src="@drawable/ic_flag_en" />
         </LinearLayout>
 
         <View
@@ -93,7 +91,7 @@
             <ImageView
                 android:layout_width="@dimen/margin_40"
                 android:layout_height="@dimen/margin_26"
-                android:src="@drawable/ic_flat_cn" />
+                android:src="@drawable/ic_flag_cn" />
         </LinearLayout>
 
         <View
@@ -121,7 +119,7 @@
             <ImageView
                 android:layout_width="@dimen/margin_40"
                 android:layout_height="@dimen/margin_26"
-                android:src="@drawable/ic_flat_vn" />
+                android:src="@drawable/ic_flag_vi" />
         </LinearLayout>
 
         <View
