--- a/app/src/main/res/layout/item_flipper.xml
+++ b/app/src/main/res/layout/item_flipper.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/tv_marquee"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
@@ -8,6 +7,7 @@
     android:focusable="true"
     android:gravity="center_vertical"
     android:singleLine="true"
-    android:textColor="@color/color_6C7BA8"
-    android:textSize="@dimen/textSize12sp"
-    tools:text="內容長度一定要超過控制元件的長度,內容長度一定要超過控制元件的長度,內容長度一定要超過控制元件的長度" />
+    android:ellipsize="end"
+    android:textColor="@color/color_A65B0A"
+    android:textSize="@dimen/textSize14sp"
+    android:text="2022世界杯来临，OKBET特邀球届专来讲座" />
