--- a/app/src/main/res/layout/view_toolbar_home.xml
+++ b/app/src/main/res/layout/view_toolbar_home.xml
@@ -31,41 +31,59 @@
         android:scaleType="fitStart"
         android:src="@drawable/logo_okbet_color" />
 
-    <Space
+    <androidx.legacy.widget.Space
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1" />
 
-    <TextView
-        android:id="@+id/tv_balance_currency"
+    <LinearLayout
+        android:id="@+id/lin_money"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/margin_10"
-        android:layout_marginEnd="@dimen/margin_5"
-        android:textStyle="bold"
-        android:fontFamily="@font/helvetica_bold"
-        android:textColor="@color/color_414655"
-        android:textSize="@dimen/textSize16sp"
-        tools:text="₱" />
+        android:gravity="center_vertical">
 
-    <TextView
-        android:id="@+id/tv_balance"
+
+        <TextView
+            android:id="@+id/tv_balance_currency"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/margin_10"
+            android:layout_marginEnd="@dimen/margin_5"
+            android:textStyle="bold"
+            android:fontFamily="@font/helvetica_bold"
+            android:textColor="@color/color_414655"
+            android:textSize="@dimen/textSize16sp"
+            tools:text="₱" />
+
+        <TextView
+            android:id="@+id/tv_balance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/margin_4"
+            android:fontFamily="@font/helvetica_bold"
+            android:textColor="@color/color_414655"
+            android:textSize="@dimen/textSize18sp"
+            android:textStyle="bold"
+            android:text="12,600.000"
+            tools:text="12,600.000" />
+
+        <ImageView
+            android:id="@+id/iv_money_refresh"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
+            android:minWidth="30dp"
+            android:src="@drawable/ic_refresh_blue"
+            tools:visibility="visible" />
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/btn_login"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/margin_4"
-        android:fontFamily="@font/helvetica_bold"
-        android:textColor="@color/color_414655"
-        android:textSize="@dimen/textSize18sp"
-        android:textStyle="bold"
-        android:text="12,600.000"
-        tools:text="12,600.000" />
-
-    <ImageView
-        android:id="@+id/iv_money_unit"
-        android:layout_width="18dp"
-        android:layout_height="18dp"
-        android:minWidth="30dp"
-        android:src="@drawable/ic_money_refresh01"
+        android:layout_height="30dp"
+        android:background="@drawable/bg_btn_login_radius_11"
+        android:textColor="@color/color_FFFFFF"
+        android:textSize="12sp"
+        android:text="注册/登录"
+        android:visibility="gone"
         tools:visibility="visible" />
-
 </LinearLayout>
