--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -124,7 +124,9 @@
     <color name="color_6C7BA8">#6C7BA8</color>
     <color name="background">@color/color_F0F5FA</color>
     <color name="color_414655">#414655</color>
-
+    <color name="color_A65B0A">#A65B0A</color>
+    <color name="color_A7B2C4">#A7B2C4</color>
+    <color name="color_E23434">#E23434</color>
 
     <color name="color_262626_edf4ff">@color/color_edf4ff</color>
     <color name="color_0C2040_a9bedf">@color/color_a9bedf</color>
